# ds3021-final

./: .gitignore  README.md  data_analyst.ipynb  data_scientist.ipynb  pricing_analyst.ipynb  pyproject.toml
